--- a/src/app/components/forms/auth/register/register.component.scss
+++ b/src/app/components/forms/auth/register/register.component.scss
@@ -76,3 +76,16 @@
     height: calc(100vh - 70px) !important;
   }
 }
+
+@media (max-height: $mobile) and (orientation: landscape) {
+  .main-container {
+    height: 50% !important;
+  }
+  .user-image {
+    display: none;
+  }
+  .card-container {
+    margin-top: 2%;
+    width: 100%;
+  }
+}
